# aitemporal

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/src/app/: layout.tsx  page.tsx
scripts/: .env.example  S3AudioFile.py  audio_models.py  audio_processing.py  cleanup_pinecone.py  explore-diarization.ipynb  explore.ipynb  load_transcripts.py  name_recognition.py  print_diarized.py  pyproject.toml  reset_processed.py  start_backend.py  test_db.py  transcript_db.py  video_descriptions_cache.csv  videos_cache.db
