[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Atemporal podcast RAG service"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic>=2.10.0",
    "python-multipart==0.0.6",
    "pinecone-client==2.2.4",
    "openai==1.3.7",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
