[project]
name = "aitemporal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "openai>=1.106.1",
    "pinecone>=7.3.0",
    "psutil>=6.1.0",
    "pydantic>=2.11.7",
    "sentence-transformers>=5.1.0",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.9.5",
]
