[project]
name = "aitemporal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "ffmpeg-python>=0.2.0",
    "jupyter>=1.1.1",
    "memory-profiler>=0.61.0",
    "objgraph>=3.6.2",
    "openai>=1.106.1",
    "openai-whisper>=20250625",
    "pinecone[asyncio]>=7.3.0",
    "pip>=25.2",
    "psutil>=6.1.0",
    "py-spy>=0.4.1",
    "pyannote-audio>=3.4.0",
    "pydantic>=2.11.7",
    "pympler>=1.1",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "types-yt-dlp>=2025.9.5.20250907",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.9.5",
]
